# DANO-final-25

./: .gitattributes  .gitignore  README.md  pyproject.toml
cache/: cache_addresses.csv  cache_features.csv  deleted_deals.csv  deleted_flats.csv
data/: deals.csv  flats.csv
maps/: flats_visualization.html  gradient_map.html
notebooks/: main.ipynb  math.ipynb  plots.ipynb
scripts/: map.py  merge.py  parser.py
